=head1 NAME

Bric::Changes - Bricolage Changes

=head1 DATE

$LastChangedDate$

=head1 DESCRIPTION

This document lists the Changes to Bricolage introduced with each release.

=head1 VERSION 1.11.0 ()

=head2 Improvements

=over

=item *

The left nav menu no longer uses an C<< <iframe> >>. Javascript and cookies
are used instead, making the left nav faster. [Scott, Marshall, David]

=back

=head2 Bug Fixes

=over

=item *

Moved the templates in F<comp/widgets/wrappers/sharky/> to 
F<comp/widgets/wrappers/> since "sharky" makes no sense. [Marshall]

=back

=head1 VERSION 1.10.2 ()

=head2 Improvements

=over

=item *

Added the C<subelement_id> parameter to the story and media C<list()> methods.
[David]

=item *

Added placeholder for Japanese localization. Expect a translation soon!
[David]

=item *

Codeselect field Perl code can now return an array of array references or a
hash reference, in addition to the previous support for an even-sized array
reference. [David]

=item *

Added a "Republish" checkbox and corresponding "Publish Checked" button to the
Story and Media "Find" pages for stories and media not currently in workflow
and to which the user has PUBLISH permission. Based on a patch from Serge
Sozonoff. [David]

=item *

Added tests for C<Bric::SOAP::Auth>. [Scott]

=back

=head2 Bug Fixes

=over

=item *

Fixed the rarely-used DISABLE_NAV_LAYER bricolage.conf directive. [Scott]

=item *

Fixed warnings in deprecated methods of
L<Bric::Biz::Element::Container|Bric::Biz::Element::Container> so that they
are no longer fatal. Reported by Nate Perry Thistle. [David]

=item *

Fixed reverted media that led to the "Too many Bric::Biz::Element::Container
objects found". It was supposed to have been fixed in 1.10.1, but that fix
unfortunately only fixed stories. Reported by Tom Kjeldsen. [David]

=item *

Fixed the C<subelement_key_name> parameter to the story and media C<list()>
methods. [David]

=item *
