@@ -717,6 +717,12 @@ any error pointers.
 
 To Translate:
 
+  "All jobs" => "All jobs",
+  "Today's jobs" => "Today's jobs",
+  "Future jobs" => "Future jobs",
+  "Expire jobs" => "Expire jobs",
+  "Failed jobs" => "Failed jobs",
+  "My jobs" => "My jobs",
   'The URI "[_1]" is not unique. Please change the cover date, output channels, slug, or categories as necessary to make the URIs unique.' => 'The URI "[_1]" is not unique. Please change the cover date, output channels, slug, or categories as necessary to make the URIs unique.'
   'You do not have permission to override user "[_1]"' => 'You do not have permission to override user "[_1]"',
   'Template "[_1]" deployed.' => 'Vorlage "[_1]" ausgebracht',
