@@ -712,6 +712,12 @@ our %Lexicon = (
 
 To translate:
 
+  "All jobs" => "All jobs",
+  "Today's jobs" => "Today's jobs",
+  "Future jobs" => "Future jobs",
+  "Expire jobs" => "Expire jobs",
+  "Failed jobs" => "Failed jobs",
+  "My jobs" => "My jobs",
   'Slug required for non-fixed (non-cover) story type.' => 'Slug required for non-fixed (non-cover) story type.',
   '[_1] Site [_2] Permissions' => '[_1] Site [_2] Permissions', # Site Category Permissions
   'The URI "[_1]" is not unique. Please change the cover date, output channels, slug, or categories as necessary to make the URIs unique.' => 'The URI "[_1]" is not unique. Please change the cover date, output channels, slug, or categories as necessary to make the URIs unique.'
